src/components/style/imports/_main.scss
@use "sass:math";

.vr {
  margin-top: $base-sizing
}

.bluetext {
  color: $lightblue;
  margin-bottom: 25px;
  font-weight: 600;
  margin: 0;
}

.uppercase {
  font-size: 1.25rem;
  text-transform: uppercase;
}

.centered {
  text-align: center;
}

.spacer, .navbar {
  height: $base-sizing*3;
}

.fof {
  min-width: $base-sizing*10;
}

.navbar {
  background: $darkblue;
  border-bottom: 1px solid rgba(255,255,255,.1);
  display: flex;
  justify-content: center;
  position: fixed;
  width: 100%;
  top: 0;
  z-index: 1000;
  padding: 0 $base-sizing;

  &__inner {
    width: min(100vw, $base-sizing*42);
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    padding: math.div($base-sizing, 2) $base-sizing;
  }

  .toggle, .toggleLabel {
    display: none;
  }

  .toggleLabel {
    position: absolute;
    right: $base-sizing;
    top: 50%;
    transform: translateY(-50%);
    justify-content: center;
    align-items: center;

    svg {
      width: $base-sizing;
      height: $base-sizing;
      fill: white;
    }
  }

  .navbar-brand {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;

    img {
      height: 75%;
      width: 100%;
    }
  }
}

.hero, .section {
  color: white;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.hero {
  min-height: 100vh;
  background-image: url("../img/assets/bgwp-e1644425763180.png");
  background-size: cover;
  background-attachment: fixed;
  padding: $base-sizing*3 0;

  &__wrapper {
    display: flex;
    flex-wrap: wrap;
    padding: $base-sizing*2;
    gap: $base-sizing;
    align-items: center;
    justify-content: center;
    max-width: $base-sizing*42;

    img {
      flex: 1;
      max-width: min($base-sizing*14, 90vw);
    }
  }

  &__text {
    font-size: 1.2em;
    flex: 1;

    h1 {
      font-weight: 700;
    }
  }
}

.section {
  &__text {
    width: min(100vw, $base-sizing*25);
    padding: $base-sizing*2;

    p {
      color: #ccc;
      font-size: .8em;
    }
  }

  &__wide {
    width: min(100%, $base-sizing*30);
    padding: $base-sizing*2 0;
  }

  &__image {
    background-image: url("../img/assets/bgwp-e1644425763180.png");
    background-size: cover;
    background-attachment: fixed;
  }

  &__color {
    background-color: #101c3d
  }

  &__horizontal {
    display: flex;
    flex-wrap: wrap;
    padding: $base-sizing*4 15vw;
    gap: $base-sizing*3;

    img {
      height: auto;
      width: 100%;
      max-width: 600px;
      margin: 0 auto;
      min-width: $base-sizing*4;
    }

    .section__text {
      width: 100%;
      flex: 1;
      display: flex;
      padding: 0;
      flex-direction: column;
      justify-content: center;
    }

    .section__partners {
      flex-direction: row;
    }
  }

  &__partners {
    flex-direction: row;
    gap: $base-sizing*2;
    flex-wrap: wrap;
    display: flex;
    align-items: center;
    justify-content: space-between;

    .img {
      flex: 1;
      max-width: $base-sizing*5;
      width: 100%;

      img {
        height: auto;
        width: 100%;
      }
    }

    .card {
      display: flex;
      flex-direction: column;
      gap: math.div($base-sizing, 4);
      min-width: min(100%, $base-sizing*8);
      align-items: center;
      text-align: center;

      a {
        color: white;
      }

      .img {
        max-width: $base-sizing*6;
      }

      .vertical {
        display: flex;
        flex-direction: column;
      }
    }
  }
}

.btn {
  background: linear-gradient(90deg,#00487d 0%,#0080c7 100%);
  border-radius: 100px;
  padding: 10px 40px;
  color: white;
  text-decoration: none;
  display: flex;
  align-items: center;
  gap: 5px;
  width: max-content;
  
  svg {
    height: math.div($base-sizing, 2);
    fill: white;
  }

  .join {
    color: #fff;
    border-radius: 50%;
    height: $base-sizing;
    padding: 7px;
    margin-left: 5px;
    background: rgba(255,255,255,.1);
    border: 1px dashed rgba(255,255,255,.5);
  }
}

.tabs-wrapper {
  width: min(100vw, $base-sizing*35);
  padding: $base-sizing;

  ul {
    list-style-type: none;
    padding-left: 0;
  }
}

.nav-tabs {
  display: flex;
  justify-content: center;
  margin-bottom: 40px;



.tab {
  padding: 10px 25px;
  font-size: .8em;
  cursor: pointer;
  border-radius: 4px;
  margin-right: 0.5rem;
  transition: all 0.3s ease 0s;
  position: relative;
}

.tab.is-active {
  background: linear-gradient(90deg,#00487d 0%,#0080c7 100%);
  color: white;

  &::before {
    position: absolute;
    left: 50%;
    bottom: -24px;
    content: "";
    height: 10px;
    width: 10px;
    border: 2px solid $lightblue;
    margin-left: -5px;
    border-radius: 50%;
  }

  &::after {
    position: absolute;
    left: 50%;
    bottom: -15px;
    content: "";
    height: 15px;
    width: 1px;
    background: $lightblue;
  }
}
}

.animate {
  .tab-panel__img, .tab-panel__text {
    animation: fadeout $transition-time!important;
    opacity: 0!important;
  }
}

.tab-panel {
  display: none;
  background-color: $darkblue;
  border-top: 3px solid $lightblue;
  padding: $base-sizing*2;
  width: 100%;
  min-height: $base-sizing*15;
  flex-wrap: wrap;
  gap: $base-sizing;

  &__img {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;

    img {
      height: auto;
      width: 75%;
      min-width: min($base-sizing*10, 35vw);
    }
  }

  &__text, &__img {
    opacity: 0;
    animation: fadeout $transition-time;
  }

  &__text {
    flex: 1;
    font-size: .9em;
    line-height: 28px;
    text-transform: none;
    font-weight: 400;
    color: #ccc;
    font-size: 15px;

    h1 {
      font-size: 2em;
      line-height: 1.2;
    }
  }

  &.is-active {
    display: flex;

    .tab-panel__text, .tab-panel__img {
      opacity: 1;
      animation: fadein $transition-time;
    }
  }
}

@keyframes fadein {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeout {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

.accordion {
  overflow: hidden;
  display: flex;
  flex-direction: column;
  gap: 30px;

  &__tab {
    width: 100%;
    color: white;
    border-radius: 8px;
    overflow: hidden;
    background: #0d152e;
    border: 1px solid rgba(255,255,255,.3);

    input {
      display: none;
    }
    
    .tab-label {
      display: flex;
      justify-content: space-between;
      padding: 1em;
      background: #0d152e;
      font-weight: bold;
      cursor: pointer;
      gap: math.div($base-sizing, 2);
      
      /* Icon */
      &:hover {
        background: darken(#0d152e, 10%);
      }

      svg {
        fill: white;
        width: $base-sizing;
        height: $base-sizing;
        text-align: center;
        transition: all .35s;
      }
    }
    .tab-content {
      max-height: 0;
      padding: 0 1em;
      color: #0d152e;
      background: #0d152e;
      color: white;
      transition: all .35s ease;
    }
    .tab-close {
      display: flex;
      justify-content: flex-end;
      padding: 1em;
      font-size: 0.75em;
      background: #0d152e;
      cursor: pointer;
      &:hover {
        background: darken(#0d152e, 10%);
      }
    }

    // :checked
    input:checked {
      + .tab-label {
        //background: darken($midnight, 10%);
        svg {
          transform: rotate(90deg);
        }
      }
      ~ .tab-content {
        max-height: 100vh;
        padding: 1em;
      }
    }
    
  }
}

.staking-graphic {
  width: 75%;
}

.text-center {
  text-align: center;
}

.links {
  display: flex;
  flex-direction: row;
  gap: $base-sizing;
  list-style-type: none;
  padding: 0;
  justify-content: space-between;

  li {
    display: flex;
    align-items: center;
  }

  a {
    font-weight: bold;
    text-transform: uppercase;
    color: white;
    font-size: .62em;
    text-decoration: none;
    padding: math.div($base-sizing, 2) 0;

    &:after {    
      background: none repeat scroll 0 0 transparent;
      bottom: 0;
      content: "";
      display: block;
      height: 2px;
      left: 50%;
      position: absolute;
      background: var(--text-color);
      transition: width 0.3s ease 0s, left 0.3s ease 0s;
      width: 0;
    }

    &:hover:after { 
      width: 100%; 
      left: 0; 
    }
  }
}

.footer {
  display: flex;
  flex-wrap: wrap;
  padding: $base-sizing*6 15vw;
  gap: $base-sizing*2;
  justify-content: space-between;
  position: relative;

  &__section {
    width: 100%;
    max-width: $base-sizing*20;

    img {
      width: 300px;
    }

    p {
      font-size: .9em;
    }
  }

  .links {
    justify-content: left;

    a {
      font-size: .7em;
    }
  }

  .graphic {
    position: absolute;
    width: 100%;
    bottom: 0;
    left: 0;
    opacity: .05;
    z-index: -500;
  }
}

.force-break {
  word-break: break-all
}

.rectangular-shape {
  position: relative;
  z-index: 0;

  &::after {
    position: absolute;
    right: 0;
    bottom: 50px;
    content: "";
    height: 600px;
    width: 600px;
    background: #437eeb;
    z-index: -1;
    opacity: .08;
    clip-path: polygon(50% 0,0 100%,100% 100%);
    transform: rotate(90deg);
  }
}

.social {
  display: flex;
  padding: 0;
  gap: math.div($base-sizing, 2);

  &__card {
    height: $base-sizing*1.5;
    width: $base-sizing*1.5;
    border-radius: math.div($border-radius, 2);
    background-color: white;
    list-style-type: none;
    
    a {
      padding: 10px;
      display: flex;
      justify-content: center;
      align-items: center;
      height: 100%;
      width: 100%;
    }

    svg {
      fill: white;
      width: 100%;
      height: min-content;
    }
  }

  .discord {
    background-color: #7289da;
  }

  .twitter {
    background-color: #1DA1F2
  }

  .medium {
    background-color: #e65a3a;
  }

  .youtube {
    background-color: #FF0000
  }
}

.counters {
  display: flex;
  flex-wrap: wrap;
  gap: math.div($base-sizing, 2);
  justify-content: space-between;

  .counter {
    flex: 1;
    min-width: $base-sizing*4;

    h1 {
      font-size: min(6vw, 2.5em);
    }
  }
}

.skeleton {
  height: $base-sizing;
  margin-bottom: 6px;
  border-radius: 2px;
  background: rgba(130, 130, 130, 0.7);
  background: linear-gradient(to right, rgba(130, 130, 130, 0.4) 8%, rgba(130, 130, 130, 0.5) 18%, rgba(130, 130, 130, 0.4) 33%);
  background-size: 800px 100px;
  animation: wave-lines 2s infinite ease-out;
}

.flipbox {
  display: flex;
  position: relative;
  width: 100%;
  transition: transform 2s;
  height: $base-sizing*8;

  &__front, &__back {
    backface-visibility: hidden;
    position: absolute;
    width: 100%;
    transition: transform .5s ease-in-out;
    transform-style: preserve-3d;
    top: 0;
    left: 0;
    background-color: $lightblue;
    border-radius: $border-radius;
    display: flex;
    padding: 0 $base-sizing;
    height: 100%;
    align-items: center;
    text-align: center;
    justify-content: center;
    flex-direction: column;
  }

  p {
    color: #ccc;
  }

  a {
    color: white;
  }

  &__front {
    transform: rotateY(0deg);
    background-image: url("../img/assets/ADAO-BG-1024x576.png");
  }

  &__back {
    transform: rotateY(180deg);
    background-color: darken($lightblue, 15%);
  }

  &:hover {
    .flipbox__front {
      transform: rotateY(180deg);
    }
  
    .flipbox__back {
      transform: rotateY(0deg);
    }
  }
}

@keyframes wave-lines {
  0% {
      background-position: -468px 0;
  }
   100% {
      background-position: 468px 0;
  }
}

